[project] # Project metadata
name = "apngasm-python"
description = "A nanobind API for apngasm, a tool/library for APNG assembly/disassembly."
requires-python = ">=3.8"
readme = "README.md"
license = { "file" = "LICENSE" }
authors = [{ "name" = "chaudominic", "email" = "chaudominic2@gmail.com" }]
keywords = ["apng", "png", "nanobind", "pybind11"]
classifiers = ["Topic :: Multimedia :: Graphics"]
dependencies = ["Pillow", "numpy"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/laggykiller/apngasm-python"
Documentation = "https://apngasm-python.readthedocs.io/en/latest/"
Tracker = "https://github.com/laggykiller/apngasm-python/issues"

[build-system] # How pip and other frontends should build this project
requires = [
    "py-build-cmake==0.2.0a7",
    "nanobind>=1.5.2",
    "nanobind-stubgen",
    "conan>=2.0",
    "wheel"
]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module] # Where to find the Python module to package
name = "apngasm_python"
directory = "src-python"

[tool.py-build-cmake.sdist] # What to include in source distributions
include = [
    "CMakeLists.txt",
    "cmake/*.cmake",
    "src/*",
    "src-python/*",
    "get_deps.py",
    "get_arch.py",
    "conanfile.py",
    "apngasm/*"
]

[tool.py-build-cmake.cmake] # How to build the CMake project
build_type = "Release"
source_path = "."
# options = { "WITH_PY_STUBS:BOOL" = "On", "CMAKE_FIND_DEBUG_MODE" = "On" }
options = { "WITH_PY_STUBS:BOOL" = "On" }
find_python3 = false
find_python = true
build_args = ["-j", "--verbose"]
install_components = ["python_module"]

[tool.cibuildwheel]
build-verbosity = 1
environment = { PY_BUILD_CMAKE_VERBOSE="1" }